# omega

./: LICENSE  README.md  pyproject.toml
demos/: lower_murrumbidgee.py
omega/: __init__.py  exceptions.py
omega/fields/: __init__.py  interpolation.py
omega/geometry/: __init__.py  polygon.py
omega/io/: __init__.py  readers.py  writers.py
omega/mesh/: __init__.py  builder.py  extrusion.py  surface.py  transform.py
